# python-boilerplate

./: .pre-commit-config.yaml  Makefile  README.md  copier.yml  pyproject.toml  {{ readme }}
src/boilerplate/api/: __init__.py  main.py  something.py
src/boilerplate/common/: __init__.py  main.py  utils.py
src/{{ python_package_name }}/api/: main.py  something.py
src/{{ python_package_name }}/common/: main.py  utils.py
template/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
template/src/{{ python_package_name }}/api/: main.py
template/src/{{ python_package_name }}/common/: main.py  utils.py
template/tests/: test_api.py  test_boilerplate.py
tests/: test_api.py  test_boilerplate.py
