[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boilerplate"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["fastapi>=0.88.0", "uvicorn>=0.20.0", "pandas"]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.290",
  "mypy>=1.3.0",
  "watchdog>=2.1.9",
  "httpx>=0.23.2",
  "pdoc>=12.3.1",
  "pre-commit>=3.5.0",
]

[tool.ruff]
ignore = [
  "ANN002", "ANN003", "ANN101", "ANN204",
  "D107", "D203", "D205", "D213", "D400", "D401", "D415",
  "E501", "PD901", "RET504"
]
select = [
  "A", "ANN", "ARG", "B", "C4", "COM", "D", "E",
  "F", "FA", "I", "N", "NPY", "PD",
  "PIE", "PLC", "PLE", "PLW", "Q",
  "RET", "RSE", "SIM", "TRY", "UP", "W"
]
line-length = 79
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.mypy]
files = ["src"]
exclude = [".env", ".venv", "venv", "notebooks"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.hatch.metadata]
allow-direct-references = true
