[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{python_package_name}}"
version = "0.0.0"
readme = "README.md"
description = "{{ project_description }}"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.88.0",
  "uvicorn>=0.20.0",
  "pandas",
  "rich>=13.7.0",
  "typer>=0.9.0",
]

[project.scripts]
{{ python_package_name }} = "{{python_package_name}}.common.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff==0.1.11",
  "mypy==1.7.1",
  "watchdog>=2.1.9",
  "httpx>=0.23.2",
  "pdoc>=12.3.1",
  "pre-commit>=3.5.0",
]

[tool.ruff]
ignore = [
  "ANN002", "ANN003", "ANN101", "ANN204", "COM812",
  "D107", "D203", "D205", "D213", "D400", "D401", "D415",
  "E501", "PD901", "RET504"
]
select = [
  "A", "ANN", "ARG", "B", "C4", "COM", "D", "E",
  "F", "FA", "I", "N", "NPY", "PD",
  "PIE", "PLC", "PLE", "PLW", "Q",
  "RET", "RSE", "SIM", "TRY", "UP", "W"
]
line-length = 79
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = false

[tool.ruff.per-file-ignores]
"tests/**" = ["D", "ANN"]

[tool.mypy]
files = ["src"]
exclude = [".env", ".venv", "venv", "notebooks"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.hatch.metadata]
allow-direct-references = true
